--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>homePage</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device width, initial-scale=1.0">
-    <link href="../CSS/Index.css" rel="stylesheet" type="text/css">
+    <link href="/HW-20/CSS/Index.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <header>
         <div><a href="#home"><img class="logo"
-                    src="../Content/theDesignProject (io) Logo.png"
+                    src="/HW-20/Content/theDesignProject (io) Logo.png"
                     alt="the Design Project Company Logo"></a></div>
         <div class="headerSpacer"></div>
         <nav>
@@ -30,7 +30,7 @@
     </header>
     <section class="heroContainer">
         <div>
-            <img class="profilePicture" src="../Content/Profile Picture.png"
+            <img class="profilePicture" src="/HW-20/Content/Profile Picture.png"
                 alt="Portrait of Connor M. Clawson">
         </div>
         <div class="columnBox">
