--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device width, initial-scale=1.0">
     <link href="/HW-20/CSS/Index.css" rel="stylesheet" type="text/css">
+    BLURP
 </head>
 
 <body>
